<resources>
    <string name="app_name">BMI Calculator</string>
    <string name="bmi_logo">Body Mass Index</string>
    <string name="calculate_your_bmi">Calculate Your BMI</string>
    <string name="bmi_settings">BMI Settings</string>
    <string name="metric">Metric</string>
    <string name="height_cm">Height (cm)</string>
    <string name="weight_kg">Weight (kg)</string>
    <string name="imperial">Imperial</string>
    <string name="feet">Height (ft)</string>
    <string name="inches">Height (in)</string>
    <string name="weight_lb">Weight (lb)</string>
    <string name="gender">Gender: </string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="age">AGE:</string>
    <string name="done">Done</string>
    <string name="settings">Settings</string>
    <string name="welcome">Welcome!</string>
    <string name="go">Go!</string>
    <string name="welcome_message">First time using your BMI calculator? \n \nLet\'s get you started!</string>
    <string name="results">Results:</string>
    <string name="information">Information:</string>
    <string name="ok">OK</string>


    <string name="_18_5_and_below">18.5 and below</string>
    <string name="underweight">Underweight</string>
    <string name="obese">Obese</string>
    <string name="_30_and_39_9">30 and 39.9</string>
    <string name="overweight">Overweight</string>
    <string name="_25_and_29_9">25 and 29.9</string>
    <string name="healthy">Healthy</string>
    <string name="_18_6_and_24_9">18.6 and 24.9</string>
</resources>
