<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#60A3D9"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="32dp"
        android:weightSum="3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <TextView
            android:id="@+id/bmi_logo"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.7"
            android:gravity="center"
            android:background="@drawable/rounded_background"
            android:text="@string/bmi_logo"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/royal_blue"
            android:textStyle="bold" />

        <TableLayout
            android:id="@+id/table_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:layout_marginTop="32dp"
            android:weightSum="2"
            android:background="@drawable/rounded_background"
            android:stretchColumns="*">

            <TableRow
                android:layout_weight="1"
                android:gravity="center">

                <TextView
                    android:id="@+id/info_heading"
                    android:textAlignment="center"
                    android:text="@string/welcome"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                    android:textColor="@color/royal_blue"
                    android:textStyle="bold"/>

            </TableRow>

            <TableRow
                android:layout_weight="1"
                android:gravity="top">

                <TextView
                    android:id="@+id/info_text"
                    android:padding="16dp"
                    android:text="@string/welcome_message"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/royal_blue"
                    android:textStyle="bold" />

            </TableRow>

        </TableLayout>

        <Button
            android:id="@+id/settings_button"
            android:onClick="startSettingsActivity"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3"
            android:layout_marginTop="32dp"
            android:background="@drawable/rounded_background"

            android:text="@string/go"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>