<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#60A3D9"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    tools:context=".ImperialActivity">


    <Button
        android:id="@+id/calculate_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_background"
        android:onClick="calculateClicked"
        android:padding="16dp"
        android:text="@string/calculate_your_bmi"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/table_layout" />

    <TableLayout
        android:id="@+id/table_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_background"
        android:gravity="center"
        android:minHeight="256dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:paddingLeft="64dp"
        android:paddingRight="64dp"
        android:stretchColumns="*"
        app:layout_constraintBottom_toTopOf="@id/calculate_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bmi_logo">

        <TableRow>

            <TextView
                android:id="@+id/height_feet"
                android:padding="16dp"
                android:text="@string/feet"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/royal_blue"
                android:textStyle="bold" />

        </TableRow>

        <TableRow>

            <SeekBar
                android:id="@+id/height_feet_seekBar"
                android:max="7"
                android:padding="16dp"
                android:progressDrawable="@drawable/seek_bar"
                android:thumb="@drawable/seek_bar_thumb" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/height_inches"
                android:padding="16dp"
                android:text="@string/inches"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/royal_blue"
                android:textStyle="bold" />

        </TableRow>

        <TableRow>

            <SeekBar
                android:id="@+id/height_inches_seekBar"
                android:max="12"
                android:padding="16dp"
                android:progressDrawable="@drawable/seek_bar"
                android:thumb="@drawable/seek_bar_thumb" />

        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/weight_imperial"
                android:padding="16dp"
                android:text="@string/weight_lb"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/royal_blue"
                android:textStyle="bold" />
        </TableRow>

        <TableRow>

            <SeekBar
                android:id="@+id/weight_imperial_seekBar"
                android:max="441"
                android:padding="16dp"
                android:progressDrawable="@drawable/seek_bar"
                android:thumb="@drawable/seek_bar_thumb" />
        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/bmi_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_background"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/bmi_logo"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/royal_blue"
        android:textStyle="bold"

        app:layout_constraintBottom_toTopOf="@id/table_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>